fix: Changed h1 size to align with top menu

--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,7 @@ html {
 }
 
 h1 {
-  font-size: 20pt;
+  font-size: 21pt;
   color: rgba(0,0,0,0.7);
   font-family: "Roboto", sans-serif;
   font-weight: bold;
